--- a/src/tracker/Dockerfile
+++ b/src/tracker/Dockerfile
@@ -2,9 +2,8 @@ FROM python:3-alpine
 
 RUN apk add gcc musl-dev linux-headers python3-dev
 RUN pip install --no-binary :all: psutil
+RUN pip install flask
 
-ADD \src\ .
+ADD . .
 
-ENTRYPOINT python entry.py
-
-CMD ["python", "entry.py", "enp0s8"]
+ENTRYPOINT python app.py
